--- a/TODO
+++ b/TODO
@@ -63,7 +63,17 @@ mount
 partx
 -----
 
+ - add support loop devices:
+
+	partx -a /path/file.img
+
+	* associate the file with loop device (use lib/loopdev.c)
+	* map partitions by BLKPG_ADD_PARTITION
+
+ - support mapping by device-mapper if argv[0] is "kpartx" or --dm option is used.
+     
  - add regression tests for partx, addpart and delpart
+
 
 build-sys
 --------
