mkfs.minix: add fs version options
Like the original minix mkfs, add the -1 and -2 argument options to specify the
version of the filesystem to create.

Signed-off-by: Davidlohr Bueso <dave@gnu.org>

--- a/disk-utils/mkfs.minix.8
+++ b/disk-utils/mkfs.minix.8
@@ -59,7 +59,10 @@ Read the bad blocks list from
 The file has one bad block number per line.  The count of bad blocks read
 is printed.
 .TP
-.B \-v
+.B \-1
+Make a Minix version 1 filesystem.
+.TP
+.B  \-2,\-v
 Make a Minix version 2 filesystem.
 .SH "EXIT CODES"
 The exit code returned by
