--- a/misc-utils/uuidd.8
+++ b/misc-utils/uuidd.8
@@ -2,30 +2,12 @@
 .\" Copyright 2007 by Theodore Ts'o.  All Rights Reserved.
 .\" This file may be copied under the terms of the GNU Public License.
 .\"
-.TH UUIDD 8 "February 2011" "Linux"
+.TH UUIDD "8" "June 2011" "util-linux" "System Administration Utilities"
 .SH NAME
 uuidd \- UUID generation daemon
 .SH SYNOPSIS
 .B uuidd
-.RB [ \-d ]
-.RB [ \-p
-.IR pidfile ]
-.RB [ \-q ]
-.RB [ \-s
-.IR socketpath ]
-.RB [ \-T
-.IR timeout ]
-.br
-.B uuidd
-.RB [ \-r | \-t ]
-.RB [ \-n
-.IR number ]
-.RB [ \-q ]
-.RB [ \-s
-.IR socketpath ]
-.br
-.B uuidd \-k
-.RB [ \-q ]
+[\fIoptions\fR]
 .SH DESCRIPTION
 The
 .B uuidd
@@ -35,45 +17,59 @@ in a secure and guaranteed-unique fashion, even in the face of large
 numbers of threads running on different CPUs trying to grab UUIDs.
 .SH OPTIONS
 .TP
-.B \-d
-Run
-.B uuidd
-in debugging mode.  This prevents uuidd from running as a daemon.
-.TP
-.B \-k
-If currently a uuidd daemon is running, kill it.
-.TP
-.BI \-n " number"
-When issuing a test request to a running uuidd, request a bulk response
-of
-.I number
-UUIDs.
-.TP
-.BI \-p  " pidfile"
+\fB\-p\fR, \fB\-\-pid\fR=\fIPATH\fR
 Specify the pathname where the pid file should be written.  By default,
 the pid file is written to /var/run/uuidd/uuidd.pid.
 .TP
-.B \-r
-Test uuidd by trying to connect to a running uuidd daemon and
-request it to return a random-based UUID.
-.TP
-.BI \-q
-Suppress some failure messages.
-.TP
-.BI \-s " socketpath"
+\fB\-s\fR, \fB\-\-socket\fR=\fIPATH\fR
 Specify the pathname used for the unix-domain socket used by uuidd.  By
 default, the pathname used is /var/run/uuidd/request.  This is primarily
 for debugging purposes, since the pathname is hard-coded in the libuuid
 library.
 .TP
-.B \-t
+\fB\-T\fR, \fB\-\-timeout\fR=\fISEC\fR
+Specify a timeout for uuidd.  If specified, then uuidd will exit after
+.TP
+\fB\-k\fR, \fB\-\-kill\fR
+If currently a uuidd daemon is running, kill it.
+.TP
+\fB\-r\fR, \fB\-\-random\fR
+Test uuidd by trying to connect to a running uuidd daemon and
+request it to return a random-based UUID.
+.TP
+\fB\-t\fR, \fB\-\-time\fR
 Test uuidd by trying to connect to a running uuidd daemon and
 request it to return a time-based UUID.
 .TP
-.BI \-T " timeout"
-Specify a timeout for uuidd.  If specified, then uuidd will exit after
+\fB\-n\fR, \fB\-\-uuids\fR=\fINUM\fR
+When issuing a test request to a running uuidd, request a bulk response
+of
+.I number
+UUIDs.
+.TP
+.B \-d
+Run
+.B uuidd
+in debugging mode.  This prevents uuidd from running as a daemon.
+.TP
+.BI \-q
+Suppress some failure messages.
 .I timeout
 seconds of inactivity.
+.TP
+\fB\-V\fR, \fB\-\-version\fR
+Output version information and exit.
+.TP
+\fB\-h\fR, \fB\-\-help\fR
+Display help screen and exit.
+.SH EXAMPLE
+Start up a daemon, print few keys and at the end stop the daemon.
+.PP
+.nf
+uuidd -p /tmp/uuidd.pid -s /tmp/uuidd.socket
+uuidd -d -r -n 42 -s /tmp/uuidd.socket
+uuidd -d -k -s /tmp/uuidd.socket
+.nf
 .SH AUTHOR
 The
 .B uuidd
