--- a/login-utils/login.1
+++ b/login-utils/login.1
@@ -223,7 +223,7 @@ blue		tty3 myclass2
 .fi
 .PP
 This lets the user zacho login only on tty1 and from hosts with IP
-addreses in the range 130.225.16.0 \- 130.225.16.255, and user blue is
+addresses in the range 130.225.16.0 \- 130.225.16.255, and user blue is
 allowed to log in from tty3 and whatever is specified in the class
 myclass2.
 .PP
@@ -281,7 +281,7 @@ day-or-hour ::= <day> | <hourspec>
 .fi
 .PP
 For example, the origin [mon:tue:wed:thu:fri:8\-17]tty3 means that log
-in is allowed on mondays through fridays between 8:00 and 17:59 (5:59
+in is allowed on Mondays through Fridays between 8:00 and 17:59 (5:59
 pm) on tty3.  This also shows that an hour range a\-b includes all
 moments between a:00 and b:59. A single hour specification (such as
 10) means the time span between 10:00 and 10:59.
