mount: add ufstype=ufs2 to mount.8
Addresses: https://bugzilla.redhat.com/show_bug.cgi?id=691338
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/mount/mount.8
+++ b/mount/mount.8
@@ -2321,6 +2321,12 @@ Old format of ufs, this is the default, read only.
 .B 44bsd
 For filesystems created by a BSD-like system (NetBSD,FreeBSD,OpenBSD).
 .TP
+.B ufs2
+Used in FreeBSD 5.x supported as read-write.
+.TP
+.B 5xbsd
+Synonym for ufs2.
+.TP
 .B sun
 For filesystems created by SunOS or Solaris on Sparc.
 .TP
