--- a/misc-utils/blkid.8
+++ b/misc-utils/blkid.8
@@ -102,6 +102,10 @@ automatically enabled.  This option can be used together with the \fB-p\fR optio
 .TP
 .B \-l
 Look up only one device that matches the search parameter specified with the
+.TP
+.B \-k
+List all known filesystems and RAIDs and exit.
+.TP
 .B \-t
 option.  If there are multiple devices that match the specified search
 parameter, then the device with the highest priority is returned, and/or
