mkfs.minix: document -3 option
Signed-off-by: Davidlohr Bueso <dave@gnu.org>

--- a/disk-utils/mkfs.minix.8
+++ b/disk-utils/mkfs.minix.8
@@ -64,6 +64,9 @@ Make a Minix version 1 filesystem.
 .TP
 .B  \-2,\-v
 Make a Minix version 2 filesystem.
+.TP
+.B \-3
+Make a Minix version 3 filesystem.
 .SH "EXIT CODES"
 The exit code returned by
 .B mkfs.minix
