--- a/sys-utils/dmesg.1
+++ b/sys-utils/dmesg.1
@@ -5,12 +5,7 @@
 dmesg \- print or control the kernel ring buffer
 .SH SYNOPSIS
 .B dmesg
-.RB [ \-c ]
-.RB [ \-r ]
-.RB [ \-n
-.IR level ]
-.RB [ \-s
-.IR bufsize ]
+.RB [ options ]
 .SH DESCRIPTION
 .B dmesg
 is used to examine or control the kernel ring buffer.
@@ -24,23 +19,11 @@ and mail the
 .I boot.messages
 file to whoever can debug their problem.
 .SH OPTIONS
-.TP
-.B \-c
+.IP "\fB\-c, \-\-read-clear\fP"
 Clear the ring buffer contents after printing.
-.TP
-.B \-r
-Print the raw message buffer, i.e., don't strip the log level prefixes.
-.TP
-.BI \-s " bufsize"
-Use a buffer of size
-.I bufsize
-to query the kernel ring buffer.  This is 16392 by default.
-(The default kernel syslog buffer size was 4096
-at first, 8192 since 1.3.54, 16384 since 2.1.113.)
-If you have set the kernel buffer to be larger than the default
-then this option can be used to view the entire buffer.
-.TP
-.BI \-n " level"
+.IP "\fB\-h, \-\-help\fP"
+Print a help text and exit.
+.IP "\fB\-n, \-\-console-level \fIlevel\fP
 Set the
 .I level
 at which logging of messages is done to the console.  For example,
@@ -58,9 +41,18 @@ option is used,
 will
 .I not
 print or clear the kernel ring buffer.
-
-When both options are used, only the last option on the command line will
-have an effect.
+.IP "\fB\-r, \-\-raw\fP"
+Print the raw message buffer, i.e., don't strip the log level prefixes.
+.IP "\fB\-s, \-\-buffer-size \fIsize\fP
+Use a buffer of
+.I size
+to query the kernel ring buffer.  This is 16392 by default.
+(The default kernel syslog buffer size was 4096
+at first, 8192 since 1.3.54, 16384 since 2.1.113.)
+If you have set the kernel buffer to be larger than the default
+then this option can be used to view the entire buffer.
+.IP "\fB\-V, \-\-version\fP"
+Output version information and exit.
 .SH SEE ALSO
 .BR syslogd (8)
 .\" .SH AUTHOR
