dmesg: add --clear (SYSLOG_ACTION_CLEAR)
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/sys-utils/dmesg.1
+++ b/sys-utils/dmesg.1
@@ -19,6 +19,8 @@ and mail the
 .I boot.messages
 file to whoever can debug their problem.
 .SH OPTIONS
+.IP "\fB\-C, \-\-clear\fP"
+Clear the ring buffer.
 .IP "\fB\-c, \-\-read-clear\fP"
 Clear the ring buffer contents after printing.
 .IP "\fB\-h, \-\-help\fP"
