mount: remove accidental extra word in ext4 documentation in mount.8
Reported-by: Francis Russell <francis+dbts@unchartedbackwaters.co.uk>
Addresses: http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=599550
Signed-off-by: Petr Uzel <petr.uzel@suse.cz>

--- a/mount/mount.8
+++ b/mount/mount.8
@@ -1487,7 +1487,7 @@ debugging purposes.  This is normally used while
 remounting a filesystem which is already mounted.
 .TP
 .BR auto_da_alloc | noauto_da_alloc
-Many broken applications don't use fsync() when noauto_da_alloc
+Many broken applications don't use fsync() when
 replacing existing files via patterns such as
 
 fd = open("foo.new")/write(fd,..)/close(fd)/ rename("foo.new", "foo")
