mount: fix typo in mount.8
Reported-by: Lars Wirzenius <liw@liw.fi>
Addresses: http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=605007
Signed-off-by: Petr Uzel <petr.uzel@suse.cz>

--- a/mount/mount.8
+++ b/mount/mount.8
@@ -1451,7 +1451,7 @@ RAID chunk size in filesystem blocks.
 Deferring block allocation until write-out time.
 .TP
 .BR nodelalloc
-Disable delayed allocation. Blocks are allocation when data is copied from user
+Disable delayed allocation. Blocks are allocated when data is copied from user
 to page cache.
 .TP
 .BI max_batch_time= usec
