mount: fix typo in mount.8
Reported-by: Reuben Thomas <rrt@sc3d.org>
Addresses: http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=603096
Signed-off-by: Petr Uzel <petr.uzel@suse.cz>

--- a/mount/mount.8
+++ b/mount/mount.8
@@ -150,7 +150,7 @@ udev symlinks in the /etc/fstab file. The tags are
 more readable, robust and portable. The
 .BR mount (8)
 command internally uses udev
-symlinks, so use the symlinks in /etc/fstab is not advantage over LABEL=/UUID=.
+symlinks, so use the symlinks in /etc/fstab has no advantage over LABEL=/UUID=.
 For more details see
 .BR libblkid (3).
 
