mount: fix typos in mount.8
From: Nicolas Francois <nicolas.francois@centraliens.net>

Addresses: http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=530681#15
Signed-off-by: Petr Uzel <petr.uzel@suse.cz>

--- a/mount/mount.8
+++ b/mount/mount.8
@@ -804,7 +804,7 @@ and
 mount options.
 .TP
 .B noatime
-Do not update inode access times on this filesystem (e.g, for faster
+Do not update inode access times on this filesystem (e.g., for faster
 access on the news spool to speed up news servers).
 .TP
 .B auto
@@ -2408,7 +2408,7 @@ before trying
 .TP
 .B utf8
 UTF8 is the filesystem safe 8-bit encoding of Unicode that is used by the
-console. It can be be enabled for the filesystem with this option or disabled
+console. It can be enabled for the filesystem with this option or disabled
 with utf8=0, utf8=no or utf8=false. If `uni_xlate' gets set, UTF8 gets
 disabled.
 .TP
