docs: add long options to fdformat.8
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/disk-utils/fdformat.8
+++ b/disk-utils/fdformat.8
@@ -1,12 +1,11 @@
 .\" Copyright 1992, 1993 Rickard E. Faith (faith@cs.unc.edu)
 .\" May be distributed under the GNU General Public License
-.TH FDFORMAT 8 "1 February 1993" "Linux 0.99" "Linux Programmer's Manual"
+.TH FDFORMAT "8" "July 2011" "util-linux" "System Administration Utilities"
 .SH NAME
 fdformat \- Low-level formats a floppy disk
 .SH SYNOPSIS
 .B fdformat
-.RB [ \-n ]
-.I device
+[\fIoptions\fR] \fIdevice\fR
 .SH DESCRIPTION
 .B fdformat
 does a low level format on a floppy disk.
@@ -25,7 +24,7 @@ minor is shown for informational purposes only):
 /dev/fd0h360  (minor = 20)
 /dev/fd0h720  (minor = 24)
 /dev/fd0H1440 (minor = 28)
-
+.PP
 /dev/fd1d360  (minor = 5)
 /dev/fd1h1200 (minor = 9)
 /dev/fd1D360  (minor = 13)
@@ -37,19 +36,24 @@ minor is shown for informational purposes only):
 /dev/fd1H1440 (minor = 29)
 .RE
 .fi
-
+.PP
 The generic floppy devices, /dev/fd0 and /dev/fd1, will fail to work with
 .B fdformat
 when a non-standard format is being used, or if the format has not been
 autodetected earlier.  In this case, use
 .BR setfdprm (8)
 to load the disk parameters.
-
 .SH OPTIONS
 .TP
-.B \-n
+\fB\-n\fR, \fB\-\-no\-verify\fR
 No verify.  This option will disable the verification that is performed
 after the format.
+.TP
+\fB\-V\fR, \fB\-\-version\fR
+Output version information and exit.
+.TP
+\fB\-h\fR, \fB\-\-help\fR
+Display help and exit.
 .SH "SEE ALSO"
 .BR fd (4),
 .BR setfdprm (8),
