--- a/sys-utils/dmesg.1
+++ b/sys-utils/dmesg.1
@@ -38,6 +38,12 @@ Disable printing messages to the console.
 Enable printing messages to the console.
 .IP "\fB\-h, \-\-help\fP"
 Print a help text and exit.
+.IP "\fB\-l, \-\-level \fIlist\fP"
+Restrict output to defined (comma separated) list of levels. For exmaple
+.sp
+  dmesg --level=err,warn
+.sp
+will print error and warning messages only.
 .IP "\fB\-n, \-\-console-level \fIlevel\fP
 Set the
 .I level
