dmesg: add --decode to print readable facility and level
 # dmesg --decode
 ...
 kern  :info  : [53335.743185] PM: resume of devices complete after 2496.795 msecs
 kern  :debug : [53335.743593] PM: Finishing wakeup.
 kern  :warn  : [53335.743595] Restarting tasks ... done.
 kern  :info  : [53335.790452] video LNXVIDEO:00: Restoring backlight state
 kern  :debug : [53336.418576] e1000e 0000:00:19.0: irq 45 for MSI/MSI-X

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/sys-utils/dmesg.1
+++ b/sys-utils/dmesg.1
@@ -44,6 +44,8 @@ Restrict output to defined (comma separated) list of levels. For exmaple
   dmesg --level=err,warn
 .sp
 will print error and warning messages only.
+.IP "\fB\-x, \-\-decode\fP"
+Decode facility and level (priority) number to human readable prefixes.
 .IP "\fB\-n, \-\-console-level \fIlevel\fP
 Set the
 .I level
